--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Maik Costa - Resume</title>
     <link rel="apple-touch-icon-precomposed" sizes="152x152" href="path-to/apple-touch-icon-152x152.png">
     <link rel="icon" type="image/png" href="assets/img/Java.png" sizes="32x32">
-    <link rel="shortcut icon" href="assets/img/Java.ico"> 
+    <link rel="shortcut icon" href="assets/img/Java.ico">
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.mfancytitle-0.4.1.min.js"></script>
@@ -159,7 +159,7 @@
                     </p>
                 </section>
                 <!--========== PAGE-BREAK ==========-->
-                <div class="html2pdf__page-break"></div>                
+                <div class="html2pdf__page-break"></div>
 
                 <!--========== EDUCATION ==========-->
                 <section class="education section" id="education">
@@ -257,25 +257,44 @@
 
                             <div class="experience__data bd-grid">
                                 <h3 class="experience__title">TOTVS Specialist</h3>
-                                <span class="experience__company">From 2021 to today | Access System and Process</span>
-                                <p class="experience__description">Responsabilidades:
-                                    • Disseminar e ajudar o time na adoção de práticas ágeis;
-                                    • Apoiar o Product Owner e os membros do time para criar itens do backlog de
-                                    forma clara e concisa;
-                                    • Conduzir e facilitar as cerimônias: Daily, Planning, Review e Retrospectiva;
-                                    • Avaliar junto ao time o andamento das entregas em Sprints e Kanban;
-                                    • Participação na cerimônia de Retrospectiva, avaliando junto ao time a evolução das
-                                    entregas;
-                                    • Suporte ao time de desenvolvimento, tirando os impedimentos diários e auxiliando
-                                    no entendimento do negócio;
-                                    • Atuação em Squads com diferentes produtos, tais como: TOTVS Protheus, Front-End e
-                                    Apps.
-                                    • Potencializar características na equipe, como proatividade, boa comunicação e bom
-                                    relacionamento em equipes multidisciplinares
-                                    • Promover a auto-organização
-                                    • Gestão de Conflitos
+                                <span class="experience__company">From 05/2021 to today | Azul Seguros</span>
+                                <p class="experience__description">Porto Seguro "Bllu" product
+                                    - Participation in the agile product team
+                                    - Squad member with technical bias TOTVS Protheus
+                                    - Support in the integration of the FRONT-END and BACK-END fronts between legacy
+                                    systems
+                                    - Testing and Approval of new features
+                                    - Support support in production cases</p>
+                            </div>
+                        </div>
+                        <div class="experience__content">
+                            <div class="experience__time">
+                                <span class="experience__rounder"></span>
+                                <span class="experience__line"></span>
+                            </div>
 
-                                    Ferramentas: Jira Software e Monday.</p>
+                            <div class="experience__data bd-grid">
+                                <h3 class="experience__title">Scrum Master</h3>
+                                <span class="experience__company">From 03/2021 to 04/2021 | Access System and
+                                    Process</span>
+                                <p class="experience__description">Responsibilities:
+                                    • Disseminate and help the team in adopting agile practices;
+                                    • Support the Product Owner and team members to create backlog items.
+                                    clear and concise form;
+                                    • Conduct and facilitate the ceremonies: Daily, Planning, Review and Retrospective;
+                                    • Evaluate with the team the progress of deliveries in Sprints and Kanban;
+                                    • Participation in the Retrospective ceremony, evaluating with the team the
+                                    evolution of
+                                    deliveries;
+                                    • Support the development team, removing the daily impediments and helping
+                                    in understanding the business;
+                                    • Acting in Squads with different products, such as: TOTVS Protheus, Front-End and
+                                    Apps.
+                                    • Leverage team characteristics, such as proactivity, good communication and good
+                                    relationship in multidisciplinary teams
+                                    • Promote self-organization
+                                    • Conflict management
+                                    Tools: Jira Software and Monday</p>
                             </div>
                         </div>
                         <div class="experience__content">
@@ -303,6 +322,9 @@
                                     Point and TAF. Service demand management with ITSM tools.</p>
                             </div>
                         </div>
+                        <!--========== PAGE-BREAK ==========-->
+                        <div class="html2pdf__page-break"></div>
+                        
                         <div class="experience__content">
                             <div class="experience__time">
                                 <span class="experience__rounder"></span>
@@ -324,8 +346,7 @@
                         </div>
                     </div>
                 </section>
-                <!--========== PAGE-BREAK ==========-->
-                <div class="html2pdf__page-break"></div>
+
                 <!--========== CERTIFICATES ==========-->
                 <section class="certificate section" id="certificates">
                     <h2 class="section-title">Certifications</h2>
@@ -344,22 +365,34 @@
                                 class="certificate__link">5F60DCD <i class='bx bx-link-external'></i></a>
                         </div>
                         <div class="certificate__content">
-                            <h3 class="certificate__title">DevOps Lead</h3>
+                            <h3 class="certificate__title">DevOps Essentials</h3>
                             <p class="certiticate__description">Certification Number:</p>
-                            <a href="https://www.credential.net/73d88633-5160-4819-aed3-43fbea3b480f" target="_blank"
-                                class="certificate__link">5F60DCC <i class='bx bx-link-external'></i></a>
+                            <a href="https://www.credential.net/ba3279d9-b5e5-4668-beed-f986f3ee4c23" target="_blank"
+                                class="certificate__link">5F60DC7 <i class='bx bx-link-external'></i></a>
                         </div>
                         <div class="certificate__content">
-                            <h3 class="certificate__title">DevOps Lead</h3>
+                            <h3 class="certificate__title">Lean IT Essentials</h3>
                             <p class="certiticate__description">Certification Number:</p>
-                            <a href="https://www.credential.net/73d88633-5160-4819-aed3-43fbea3b480f" target="_blank"
-                                class="certificate__link">5F60DCC <i class='bx bx-link-external'></i></a>
+                            <a href="https://www.credential.net/92756c05-a94e-4444-b186-2601677aefe4" target="_blank"
+                                class="certificate__link">5F60DC8 <i class='bx bx-link-external'></i></a>
                         </div>
                         <div class="certificate__content">
-                            <h3 class="certificate__title">DevOps Lead</h3>
+                            <h3 class="certificate__title">Scrum Essentials</h3>
                             <p class="certiticate__description">Certification Number:</p>
-                            <a href="https://www.credential.net/73d88633-5160-4819-aed3-43fbea3b480f" target="_blank"
-                                class="certificate__link">5F60DCC <i class='bx bx-link-external'></i></a>
+                            <a href="https://www.credential.net/89dfa65b-b356-4dfe-ab56-0ecaeba75a9a" target="_blank"
+                                class="certificate__link">5F60DC9 <i class='bx bx-link-external'></i></a>
+                        </div>
+                        <div class="certificate__content">
+                            <h3 class="certificate__title">Scrum Master Foundation</h3>
+                            <p class="certiticate__description">Certification Number:</p>
+                            <a href="https://www.credential.net/7cbc6e70-d3a2-4099-930f-656242ab8d6e" target="_blank"
+                                class="certificate__link">5F60DCA <i class='bx bx-link-external'></i></a>
+                        </div>
+                        <div class="certificate__content">
+                            <h3 class="certificate__title">Scrum Product Owner Foundation</h3>
+                            <p class="certiticate__description">Certification Number:</p>
+                            <a href="https://www.credential.net/8d1b569e-2e95-44ec-a179-eebfffbad5aa" target="_blank"
+                                class="certificate__link">5F60DCB <i class='bx bx-link-external'></i></a>
                         </div>
                     </div>
                 </section>
