--- a/index.html
+++ b/index.html
@@ -258,13 +258,13 @@
                             <div class="experience__data bd-grid">
                                 <h3 class="experience__title">TOTVS Specialist</h3>
                                 <span class="experience__company">From 05/2021 to today | Azul Seguros</span>
-                                <p class="experience__description">Porto Seguro "Bllu" product
-                                    - Participation in the agile product team
-                                    - Squad member with technical bias TOTVS Protheus
+                                <p class="experience__description">Porto Seguro "Bllu" product <br>
+                                    - Participation in the agile product team<br>
+                                    - Squad member with technical bias TOTVS Protheus<br>
                                     - Support in the integration of the FRONT-END and BACK-END fronts between legacy
-                                    systems
-                                    - Testing and Approval of new features
-                                    - Support support in production cases</p>
+                                    systems<br>
+                                    - Testing and Approval of new features<br>
+                                    - Support support in production cases<br></p>
                             </div>
                         </div>
                         <div class="experience__content">
@@ -324,7 +324,7 @@
                         </div>
                         <!--========== PAGE-BREAK ==========-->
                         <div class="html2pdf__page-break"></div>
-                        
+
                         <div class="experience__content">
                             <div class="experience__time">
                                 <span class="experience__rounder"></span>
