--- a/index.html
+++ b/index.html
@@ -277,23 +277,23 @@
                                 <h3 class="experience__title">Scrum Master</h3>
                                 <span class="experience__company">From 03/2021 to 04/2021 | Access System and
                                     Process</span>
-                                <p class="experience__description">Responsibilities:
-                                    • Disseminate and help the team in adopting agile practices;
+                                <p class="experience__description">Responsibilities:<br>
+                                    • Disseminate and help the team in adopting agile practices;<br>
                                     • Support the Product Owner and team members to create backlog items.
-                                    clear and concise form;
-                                    • Conduct and facilitate the ceremonies: Daily, Planning, Review and Retrospective;
-                                    • Evaluate with the team the progress of deliveries in Sprints and Kanban;
-                                    • Participation in the Retrospective ceremony, evaluating with the team the
+                                    clear and concise form;<br>
+                                    • Conduct and facilitate the ceremonies: Daily, Planning, Review and Retrospective;<br>
+                                    • Evaluate with the team the progress of deliveries in Sprints and Kanban;<br>
+                                    • Participation in the Retrospective ceremony, evaluating with the team the<br>
                                     evolution of
-                                    deliveries;
+                                    deliveries;<br>
                                     • Support the development team, removing the daily impediments and helping
-                                    in understanding the business;
+                                    in understanding the business;<br>
                                     • Acting in Squads with different products, such as: TOTVS Protheus, Front-End and
-                                    Apps.
+                                    Apps.<br>
                                     • Leverage team characteristics, such as proactivity, good communication and good
-                                    relationship in multidisciplinary teams
-                                    • Promote self-organization
-                                    • Conflict management
+                                    relationship in multidisciplinary teams<br>
+                                    • Promote self-organization<br>
+                                    • Conflict management<br>
                                     Tools: Jira Software and Monday</p>
                             </div>
                         </div>
@@ -306,15 +306,12 @@
                             <div class="experience__data bd-grid">
                                 <h3 class="experience__title">IT Supervisor</h3>
                                 <span class="experience__company">From 2008 - 2021 | Santo Angelo</span>
-                                <p class="experience__description">Information Technology Management involving the area
-                                    of ​​ERP (TOTVS) and infrastructure systems. Responsible for area indicators (CAPEX
-                                    and OPEX, projects and technological evolution) Participation in the revitalization
-                                    project of the company's ERP system. Involvement in all project areas such as
+                                <p class="experience__description">Information Technology Management involving the area of ​​ERP (TOTVS) and infrastructure systems. Responsible for area indicators (CAPEX and OPEX, projects and technological evolution) Participation in the revitalization                                    project of the company's ERP system. Involvement in all project areas such as
                                     requirements gathering, user interviews, documentation, schedule definition and
                                     monitoring, physical x financial evolution, resource control, internal and external
                                     and all other project needs. Together with other managers, we redefined processes
-                                    and implemented new features. Maintenance and Development customizations,
-                                    application of packages, database management, environment configuration, maintenance
+                                    and implemented new features.<br> 
+                                    Maintenance and Development customizations,application of packages, database management, environment configuration, maintenance
                                     in data dictionary, update of releases in TOTVS Protheus systems, versions 8,10, 11
                                     and 12, knowing the modules: Billing, Financial, Inventory, Purchasing, Management
                                     Accounting, Tax Books, Document Control, Entrance Inspection, Non-Conformity
