--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <h3 class="home__profession">Full Stack Developer</h3>
                             <!-- Button to generate and download the pdf. Available for desktop. -->
                             <div>
-                                <a download="" href="assets/pdf/ResumeCv.pdf" class="home__button-movil">Download</a>
+                                <a download="" href="assets/pdf/MaikCosta-Resume.pdf" class="home__button-movil">Download</a>
                             </div>
                         </div>
                         <div class="home_address bd-grid">
@@ -336,6 +336,9 @@
                                     Tools: Jira Software and Monday</p>
                             </div>
                         </div>
+                        <!--========== PAGE-BREAK ==========-->
+                        <div class="html2pdf__page-break"></div>
+
                         <div class="experience__content">
                             <div class="experience__time">
                                 <span class="experience__rounder"></span>
@@ -358,9 +361,6 @@
                                     Point and TAF. Service demand management with ITSM tools.</p>
                             </div>
                         </div>
-                        <!--========== PAGE-BREAK ==========-->
-                        <div class="html2pdf__page-break"></div>
-
                         <div class="experience__content">
                             <div class="experience__time">
                                 <span class="experience__rounder"></span>
