--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                             <h3 class="home__profession">Full Stack Developer</h3>
                             <!-- Button to generate and download the pdf. Available for desktop. -->
                             <div>
-                                <a download="" href="assets/pdf/MaikCosta-Resume.pdf" class="home__button-movil">Download</a>
+                                <a download="" href="assets/pdf/MaikCosta-Resume.pdf"
+                                    class="home__button-movil">Download</a>
                             </div>
                         </div>
                         <div class="home_address bd-grid">
@@ -278,7 +279,7 @@
                             <span class="interests__name">Music</span>
                         </div>
                     </div>
-                </section>                
+                </section>
 
             </div>
 
@@ -320,7 +321,8 @@
                                     • Disseminate and help the team in adopting agile practices;<br>
                                     • Support the Product Owner and team members to create backlog items.
                                     clear and concise form;<br>
-                                    • Conduct and facilitate the ceremonies: Daily, Planning, Review and Retrospective;<br>
+                                    • Conduct and facilitate the ceremonies: Daily, Planning, Review and
+                                    Retrospective;<br>
                                     • Evaluate with the team the progress of deliveries in Sprints and Kanban;<br>
                                     • Participation in the Retrospective ceremony, evaluating with the team the<br>
                                     evolution of
@@ -348,12 +350,16 @@
                             <div class="experience__data bd-grid">
                                 <h3 class="experience__title">IT Supervisor</h3>
                                 <span class="experience__company">From 2008 - 2021 | Santo Angelo</span>
-                                <p class="experience__description">Information Technology Management involving the area of ​​ERP (TOTVS) and infrastructure systems. Responsible for area indicators (CAPEX and OPEX, projects and technological evolution) Participation in the revitalization                                    project of the company's ERP system. Involvement in all project areas such as
+                                <p class="experience__description">Information Technology Management involving the area
+                                    of ​​ERP (TOTVS) and infrastructure systems. Responsible for area indicators (CAPEX
+                                    and OPEX, projects and technological evolution) Participation in the revitalization
+                                    project of the company's ERP system. Involvement in all project areas such as
                                     requirements gathering, user interviews, documentation, schedule definition and
                                     monitoring, physical x financial evolution, resource control, internal and external
                                     and all other project needs. Together with other managers, we redefined processes
-                                    and implemented new features.<br> 
-                                    Maintenance and Development customizations,application of packages, database management, environment configuration, maintenance
+                                    and implemented new features.<br>
+                                    Maintenance and Development customizations,application of packages, database
+                                    management, environment configuration, maintenance
                                     in data dictionary, update of releases in TOTVS Protheus systems, versions 8,10, 11
                                     and 12, knowing the modules: Billing, Financial, Inventory, Purchasing, Management
                                     Accounting, Tax Books, Document Control, Entrance Inspection, Non-Conformity
@@ -406,6 +412,10 @@
                             <a href="https://www.credential.net/ba3279d9-b5e5-4668-beed-f986f3ee4c23" target="_blank"
                                 class="certificate__link">5F60DC7 <i class='bx bx-link-external'></i></a>
                         </div>
+
+                        <!--========== PAGE-BREAK ==========-->
+                        <div class="html2pdf__page-break"></div>
+                        
                         <div class="certificate__content">
                             <h3 class="certificate__title">Lean IT Essentials</h3>
                             <p class="certiticate__description">Certification Number:</p>
