Update page break to pdf file

--- a/index.html
+++ b/index.html
@@ -338,6 +338,9 @@
                                     Tools: Jira Software and Monday</p>
                             </div>
                         </div>
+                        <!--========== PAGE-BREAK ==========-->
+                        <div class="html2pdf__page-break"></div>
+                        
                         <div class="experience__content">
                             <div class="experience__time">
                                 <span class="experience__rounder"></span>
@@ -354,12 +357,7 @@
                                     requirements gathering, user interviews, documentation, schedule definition and
                                     monitoring, physical x financial evolution, resource control, internal and external
                                     and all other project needs. Together with other managers, we redefined processes
-                                    and implemented new features.</p>
-
-                                <!--========== PAGE-BREAK ==========-->
-                                <div class="html2pdf__page-break"></div>
-                                
-                                <p class="experience__description">
+                                    and implemented new features.<br>
                                     Maintenance and Development customizations,application of packages, database
                                     management, environment configuration, maintenance
                                     in data dictionary, update of releases in TOTVS Protheus systems, versions 8,10, 11
