--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                         best practices acquired through certifications (DevOps, Agile Scrum and Lean It) applying IT
                         frameworks software engineering with the use of object-oriented patterns, prioritizing process
                         improvement and efficiency in building solutions, software maintenance and execution of
-                        operational processes. Experience in requirements gathering, implementation, systems support,
-                        information integrity and CI / CD. Negotiation with technology partners.
+                        operational processes.<br> Experience in requirements gathering, implementation, systems support,
+                        information integrity and CI / CD.<br> Negotiation with technology partners.
                     </p>
                 </section>
                 <!--========== PAGE-BREAK ==========-->
