--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
                     <h2 class="section-title">Social</h2>
 
                     <div class="social__container bd-grid">
-                        <a href="https://www.linkedin.com/" target="_blank" class="social__link">
+                        <a href="https://www.linkedin.com/in/maikcosta/" target="_blank" class="social__link">
                             <i class="bx bxl-linkedin-square social__icon"></i>@maikcosta
                         </a>
-                        <a href="https://www.facebook.com/" target="_blank" class="social__link">
-                            <i class="bx bxl-facebook social__icon"></i>@maikcosta
+                        <a href="https://github.com/maikcosta" target="_blank" class="social__link">
+                            <i class="bx bxl-github social__icon"></i>@maikcosta
                         </a>
                         <a href="https://www.instagram.com/" target="_blank" class="social__link">
                             <i class="bx bxl-instagram social__icon"></i>@maikcosta
