--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                             </div>
 
                             <div class="experience__data bd-grid">
-                                <h3 class="experience__title">TOTVS Specialist</h3>
+                                <h3 class="experience__title">ERP TOTVS Protheus Specialist</h3>
                                 <span class="experience__company">From 05/2021 to today | Azul Seguros</span>
                                 <p class="experience__description">Porto Seguro "Bllu" product <br>
                                     - Participation in the agile product team<br>
