--- a/index.html
+++ b/index.html
@@ -150,13 +150,10 @@
                 <section class="profile section" id="profile">
                     <h2 class="section-title">Profile</h2>
                     <p class="profile_description">
-                        MBA Information System Projects and graduations in two technological areas being Web Systems
-                        Development and Computer Networks, currently has as main function to be an IT manager applying
-                        best practices acquired through certifications (DevOps, Agile Scrum and Lean It) applying IT
-                        frameworks software engineering with the use of object-oriented patterns, prioritizing process
-                        improvement and efficiency in building solutions, software maintenance and execution of
-                        operational processes.<br> Experience in requirements gathering, implementation, systems support,
-                        information integrity and CI / CD.<br> Negotiation with technology partners.
+                        Extensive experience with legacy systems, integrations and new implementations.
+Focused on his studies in Java, JavaScript and Phyton, which can be consulted on the GitHub platform, waiting for the opportunity to apply the knowledge acquired over the years.
+Experience in requirements gathering, implementation, systems support, information integrity and CI / CD.
+MBA Information System Projects and graduations in two technological areas Development of Web Systems and Computer Networks, he is currently working as ERP Specialist TOTVS Protheys in Porto Seguros Product Bllu, applying best practices acquired through certifications (DevOps, Agile Scrum and Lean It) applying software engineering frameworks using object-oriented patterns, prioritizing process improvement and efficiency in building solutions, maintaining software and executing operational processes.
                     </p>
                 </section>
                 <!--========== PAGE-BREAK ==========-->
