--- a/index.html
+++ b/index.html
@@ -151,9 +151,16 @@
                     <h2 class="section-title">Profile</h2>
                     <p class="profile_description">
                         Extensive experience with legacy systems, integrations and new implementations.
-Focused on his studies in Java, JavaScript and Phyton, which can be consulted on the GitHub platform, waiting for the opportunity to apply the knowledge acquired over the years.
-Experience in requirements gathering, implementation, systems support, information integrity and CI / CD.
-MBA Information System Projects and graduations in two technological areas Development of Web Systems and Computer Networks, he is currently working as ERP Specialist TOTVS Protheys in Porto Seguros Product Bllu, applying best practices acquired through certifications (DevOps, Agile Scrum and Lean It) applying software engineering frameworks using object-oriented patterns, prioritizing process improvement and efficiency in building solutions, maintaining software and executing operational processes.
+                        Focused on his studies in Java, JavaScript and Phyton, which can be consulted on the GitHub
+                        platform, waiting for the opportunity to apply the knowledge acquired over the years.
+                        Experience in requirements gathering, implementation, systems support, information integrity and
+                        CI / CD.
+                        MBA Information System Projects and graduations in two technological areas Development of Web
+                        Systems and Computer Networks, he is currently working as ERP Specialist TOTVS Protheys in Porto
+                        Seguros Product Bllu, applying best practices acquired through certifications (DevOps, Agile
+                        Scrum and Lean It) applying software engineering frameworks using object-oriented patterns,
+                        prioritizing process improvement and efficiency in building solutions, maintaining software and
+                        executing operational processes.
                     </p>
                 </section>
                 <!--========== PAGE-BREAK ==========-->
@@ -337,7 +344,7 @@ MBA Information System Projects and graduations in two technological areas Devel
                         </div>
                         <!--========== PAGE-BREAK ==========-->
                         <div class="html2pdf__page-break"></div>
-                        
+
                         <div class="experience__content">
                             <div class="experience__time">
                                 <span class="experience__rounder"></span>
