--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         Experience in requirements gathering, implementation, systems support, information integrity and
                         CI / CD.
                         MBA Information System Projects and graduations in two technological areas Development of Web
-                        Systems and Computer Networks, he is currently working as ERP Specialist TOTVS Protheys in Porto
+                        Systems and Computer Networks, he is currently working as ERP Specialist TOTVS Protheus in Porto
                         Seguros Product Bllu, applying best practices acquired through certifications (DevOps, Agile
                         Scrum and Lean It) applying software engineering frameworks using object-oriented patterns,
                         prioritizing process improvement and efficiency in building solutions, maintaining software and
