--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="home__data bd-grid">
                             <img src="assets/img/perfil.jpg" alt="Maik Costa" class="home__img">
                             <h1 class="home__title">MAIK <b>COSTA</b></h1>
-                            <h3 class="home__profession">Full Stack Developer</h3>
+                            <h3 class="home__profession">Java Software Engineer</h3>
                             <!-- Button to generate and download the pdf. Available for desktop. -->
                             <div>
                                 <a download="" href="assets/pdf/MaikCosta-Resume.pdf"
@@ -151,16 +151,13 @@
                     <h2 class="section-title">Profile</h2>
                     <p class="profile_description">
                         Extensive experience with legacy systems, integrations and new implementations.
-                        Focused on his studies in Java, JavaScript and Phyton, which can be consulted on the GitHub
-                        platform, waiting for the opportunity to apply the knowledge acquired over the years.
-                        Experience in requirements gathering, implementation, systems support, information integrity and
-                        CI / CD.
-                        MBA Information System Projects and graduations in two technological areas Development of Web
-                        Systems and Computer Networks, he is currently working as ERP Specialist TOTVS Protheus in Porto
-                        Seguros Product Bllu, applying best practices acquired through certifications (DevOps, Agile
-                        Scrum and Lean It) applying software engineering frameworks using object-oriented patterns,
-                        prioritizing process improvement and efficiency in building solutions, maintaining software and
-                        executing operational processes.
+                        Focused on his studies in Java, JavaScript and Python languages, which can be consulted on the GitHub platform.                        
+                        Experience in requirements gathering, deployment, systems support, information integrity and CI / CD.
+                        MBA Information System Projects and degrees in two technological areas Development of Web Systems and Computer Networks, 
+                        currently working as Software Engineers at SoftExpert, applying good practices acquired through certifications 
+                        (DevOps, Agile Scrum and Lean It) applying engineering frameworks of software with the use of object-oriented standards, 
+                        with priority on improving the process and efficiency in the construction of solutions, maintenance of software and 
+                        execution of operational processes.
                     </p>
                 </section>
                 <!--========== PAGE-BREAK ==========-->
@@ -300,8 +297,28 @@
                             </div>
 
                             <div class="experience__data bd-grid">
+                                <h3 class="experience__title">Java Software Engineer</h3>
+                                <span class="experience__company">From 05/2021 to today | SoftExpert</span>
+                                <p class="experience__description"><br>
+                                    Participation of Team Back-End System Engineers, focusing on the following SoftExpert Suite resources;
+                                    • General search<br>
+                                    • Email engine<br>
+                                    • Dynamic entities<br>
+                                    • My Tasks<br>
+                                    • Data sources<br>
+                                    • Data set<br>
+                                    • API Gateway<br></p>
+                            </div>
+                        </div>
+                        <div class="experience__content">
+                            <div class="experience__time">
+                                <span class="experience__rounder"></span>
+                                <span class="experience__line"></span>
+                            </div>
+
+                            <div class="experience__data bd-grid">
                                 <h3 class="experience__title">ERP TOTVS Protheus Specialist</h3>
-                                <span class="experience__company">From 05/2021 to today | Azul Seguros</span>
+                                <span class="experience__company">From 05/2021 to 11/2021 | Azul Seguros</span>
                                 <p class="experience__description">Porto Seguro "Bllu" product <br>
                                     - Participation in the agile product team<br>
                                     - Squad member with technical bias TOTVS Protheus<br>
