Remove first eperience

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                             <div class="experience__data bd-grid">
                                 <h3 class="experience__title">Java Software Engineer</h3>
                                 <span class="experience__company">From 05/2021 to today | SoftExpert</span>
-                                <p class="experience__description"><br>
+                                <p class="experience__description">
                                     Participation of Team Back-End System Engineers, focusing on the following SoftExpert Suite resources;
                                     • General search<br>
                                     • Email engine<br>
@@ -386,25 +386,6 @@
                                     Accounting, Tax Books, Document Control, Entrance Inspection, Non-Conformity
                                     Control, Production Control Planning, Metrology, Personnel Management, Electronic
                                     Point and TAF. Service demand management with ITSM tools.</p>
-                            </div>
-                        </div>
-                        <div class="experience__content">
-                            <div class="experience__time">
-                                <span class="experience__rounder"></span>
-                                <!--<span class="experience__line"></span>-->
-                            </div>
-
-                            <div class="experience__data bd-grid">
-                                <h3 class="experience__title">Network Analyst</h3>
-                                <span class="experience__company">From 2005 - 2008 | DAC</span>
-                                <p class="experience__description">Participation in the creation of the company's
-                                    website, responsible for updating, online support to representatives in Brazil,
-                                    firewall and proxy management, wireless network configuration and maintenance
-                                    (Access Point), server configuration (Active Directory, IIS, DNS, DHCP and Routing
-                                    ), appliance configuration and maintenance (hotbrick), management in
-                                    telephony-oriented software (sumus and tac), backup routines, improvement in the ERP
-                                    system (MK systems), support to basic, intermediate and advanced user levels,
-                                    management on the part of (PABX, VOIP , Private Link).</p>
                             </div>
                         </div>
                     </div>
